Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53458

Matching by styleName on sub-family doesn't work on Windows

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.8.0
    • 5.6.0
    • GUI: Font handling
    • None

      On windows we can not match font sub-family using styleName matching. This is because the windows fontdatabase only registers the base font-family, and not the preferred font-family.

      For instance a font like Roboto Light, would have base name "Roboto Light", but preferred family "Roboto" with preferred styleName "Light". The preferred names are however not read and registered on Windows.

      This works on Linux and OS X.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            allan.jensen Allan Sandfeld Jensen
            Votes:
            3 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes